--- a/index.html
+++ b/index.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style>
-div.cities {
-    background-color:black;
-    color:white;
-    margin:20px;
-    padding:20px;
-} 
-</style>
-</head>
+<title>Google Homepage</title>
+    <link rel="stylesheet" type="text/css" href="google.css">
 <body>
-
-<div class="cities">
-<h2>London</h2>
-<p>London is the capital city of England. It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-</div>
-
-<div class="cities">
-<h2>Paris</h2>
-<p>Paris is the capital and most populous city of France.</p>
-</div>
-
-<div class="cities">
-<h2>Tokyo</h2>
-<p>Tokyo is the capital of Japan, the center of the Greater Tokyo Area,
-and the most populous metropolitan area in the world.</p>
-</div>
-
+	<nav>
+		<ul>
+			<li>Saif</li>
+			<li>Gmail</li>
+			<li>Images</li>
+			<li><img src="/Users/cyeph/the_odin_project/google-homepage/images/app-launcher.png"><li>		
+			<li><img src="/Users/cyeph/the_odin_project/google-homepage/images/google-alerts.jpg"><li>
+			<li><img src="/Users/cyeph/the_odin_project/google-homepage/images/google-profile.jpg"><li>
+		</ul>
+	</nav>
+<section id="search">
+		<img src="http://www.domusweb.it/content/dam/domusweb/en/news/2015/09/02/google_s_new_logo/domus-01-google.jpg">
+		<form>	
+				<input type="text" name="search"><br/><br/>
+				<button type="submit">Google Search</button>
+				<button type="submit">I'm Feeling Lucky</button>
+		</form>
+</section>
+<footer>
+	 <div id="l_footer">
+		<ul>
+			<li>Advertising</li>
+			<li>Business</li>
+			<li>About</li>
+	 <div id="r_footer">
+			<li>Privacy</li>
+			<li>Terms</li>
+			<li>Settings</li>
+		</ul>
+ </div>
+ </div>
+</footer>
 </body>
 </html>
